[tool.poetry]
name = "telegram-notion-bot"
version = "0.1.0"
description = ""
authors = ["Noy"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-telegram-bot = "^20.0"
requests = "^2.32.3"
gspread = "^6.1.2"
oauth2client = "^4.1.3"
python-dotenv = "^1.0.1"
openai = "^1.35.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
